design error fixing
